overseerr/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
spec:
  template:
    spec:
      containers:
        - name: overseerr
          image: ghcr.io/hotio/seerr:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          hostPath:
            path: /opt/overseerr/config
            type: Directory
