overseerr/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5055
      name: web
