overseerr/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  ingressClassName: public
  tls:
    - secretName: overseerr-ingress-tls
      hosts:
        - overseerr.sergi.cool
  rules:
    - host: overseerr.sergi.cool
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: overseerr
                port:
                  name: web
